--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "typescript": "^5.8.3",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.1",
+    "solid-js": "^1.9.5"
   }
 }
