--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"moduleResolution": "bundler",
 		"esModuleInterop": true,
 		"isolatedModules": true,
+		"noUncheckedSideEffectImports": true,
 
 		"strict": true,
 		"noImplicitReturns": true,
